--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Hvis du klikker på dette til/fra, kan du oprette et offentligt og/eller privat websted til organisationen. (Automatic Translation)
 by-date-range=By Date Range: (Automatic Copy)
 by-email-address=By e-mail-adresse
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Kaldenavn
 by-time-frame=By Time Frame: (Automatic Copy)
 by-user-id=Efter bruger-ID
@@ -3146,6 +3147,7 @@ collection-item=Samlingselement (Automatic Translation)
 collection-items=Samlingselementer (Automatic Translation)
 collection-mapping-help=Du kan bruge tilknytning til at få vist bestemte felter for elementerne i samlingen. De tilgængelige felter afhænger af den type og undertype, der er fælles for alle elementer i samlingen. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=Udbyder af samling (Automatic Translation)
 collection-providers=Udbydere af indsamling (Automatic Translation)
 collection-title=Samlingstitel (Automatic Translation)
@@ -11641,6 +11643,7 @@ potential-actions=Potentielle handlinger
 pound=Pund
 power-users=Ekspertbrugere
 powered-by-x=Powered by {0} (Automatic Copy)
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=præcision (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Precompile JSPs for faster speed. (Automatic Copy)
