--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Napsauttamalla tätä vaihdinta voit luoda julkisen ja/tai yksityisen sivuston organisaatiollesi.
 by-date-range=Päiväyksien mukaan:
 by-email-address=Sähköpostiosoitteella
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Nimimerkilllä
 by-time-frame=Aikavälin mukaan:
 by-user-id=Käyttäjä ID:n mukaan
@@ -3146,6 +3147,7 @@ collection-item=Kokoelmatuote
 collection-items=Kokoelmatuotteet
 collection-mapping-help=Voit käyttää kartoitusta näyttämään tietyt kokoelman tuotteiden kentät. Käytettävissä olevat kentät riippuvat kokoelman kaikille tuotteille yhteisistä tyypeistä ja alatyypeistä.
 collection-page=Kokoelmasivu
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=Kokoelam Tarjoaja
 collection-providers=Kokoelman Tarjoajat
 collection-title=Kokoelman Otsikko
@@ -11640,6 +11642,7 @@ potential-actions=Mahdolliset toimenpiteet
 pound=Pauna
 power-users=Power User -käyttäjät
 powered-by-x=Palvelun tarjoaa {0}
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Tarkkuus
 precision-decimal=Tarkkuusdesimaali
 precompile-jsps-for-faster-speed=Esikäännä JSP nopeuden parantamiseksi.
