--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Dengan mengklik togol ini, anda boleh membuat tapak awam dan/atau swasta untuk organisasi anda. (Automatic Translation)
 by-date-range=Mengikut Julat Tarikh: (Automatic Translation)
 by-email-address=Melalui Alamat Emel (Automatic Translation)
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Mengikut Nama Skrin (Automatic Translation)
 by-time-frame=Mengikut Tempoh Masa: (Automatic Translation)
 by-user-id=Ibarat ID Pengguna (Automatic Translation)
@@ -3146,6 +3147,7 @@ collection-item=Item Koleksi (Automatic Translation)
 collection-items=Item Koleksi (Automatic Translation)
 collection-mapping-help=Anda boleh menggunakan pemetaan untuk memaparkan medan tertentu item dalam koleksi. Medan yang tersedia bergantung pada jenis dan subtype biasa kepada semua item dalam koleksi. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=Pembekal Koleksi (Automatic Translation)
 collection-providers=Pembekal Koleksi (Automatic Translation)
 collection-title=Tajuk Koleksi (Automatic Translation)
@@ -11641,6 +11643,7 @@ potential-actions=Tindakan Berpotensi (Automatic Translation)
 pound=Paun (Automatic Translation)
 power-users=Pengguna Kuasa (Automatic Translation)
 powered-by-x=Powered by {0} (Automatic Copy)
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Ketepatan (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Precompile jsps for faster speed.
