--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Via deze schakelaar kunt u een publieke en/of private website maken voor uw organisatie.
 by-date-range=Op datumbereik:
 by-email-address=Op e-mailadres
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Op schermnaam
 by-time-frame=Op tijdskader:
 by-user-id=Op gebruikers-ID
@@ -3146,6 +3147,7 @@ collection-item=Collectie-item
 collection-items=Collectie-items
 collection-mapping-help=U kunt toewijzingen gebruiken om specifieke velden van de items in de collectie weer te geven. De beschikbaarheid van de velden is afhankelijk van het type en subtype dat alle items in de collectie gemeen hebben.
 collection-page=Collectiepagina
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=Collectieprovider
 collection-providers=Collectieproviders
 collection-title=Collectietitel
@@ -11644,6 +11646,7 @@ potential-actions=Mogelijke acties
 pound=Pond
 power-users=Geavanceerde gebruikers
 powered-by-x=Mogelijk gemaakt door {0}
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Precisie
 precision-decimal=Precisiedecimaal
 precompile-jsps-for-faster-speed=Precompile JSP's voor extra snelheid.
