--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Нажав на этот переключатель, вы можете создать общедоступный и/или частный сайт для вашей организации. (Automatic Translation)
 by-date-range=По диапазону дат:
 by-email-address=По email адресам
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=По экранному имени
 by-time-frame=По диапазону времени:
 by-user-id=По ID пользователя
@@ -3146,6 +3147,7 @@ collection-item=Элемент коллекции (Automatic Translation)
 collection-items=Предметы коллекции (Automatic Translation)
 collection-mapping-help=Отображение можно использовать для отображения определенных полей элементов коллекции. Доступные поля зависят от типа и подтипа, общих для всех элементов коллекции. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=Поставщик коллекций (Automatic Translation)
 collection-providers=Поставщики коллекций (Automatic Translation)
 collection-title=Название коллекции (Automatic Translation)
@@ -11641,6 +11643,7 @@ potential-actions=Возможные действия
 pound=Фунт
 power-users=Продвинутые пользователи
 powered-by-x=Powered by {0} (Automatic Copy)
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=точность (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Прекомпмильные JSPs для более быстрой скорости. (Automatic Translation)
