--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=இந்த toggle-ஐ கிளிக் செய்வதன் மூலம் உங்கள் நிறுவனத்திற்கான பொது மற்றும்/அல்லது தனியார் தளத்தை உருவாக்க முடியும்.
 by-date-range=தேதி வரம்பு:
 by-email-address=மின்னஞ்சல் முகவரி மூலமாக
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=திரைப் பெயர் மூலமாக
 by-time-frame=கால வரையறை மூலமாக:
 by-user-id=பயனர் ID மூலமாக
@@ -3146,6 +3147,7 @@ collection-item=Collection Item (Automatic Copy)
 collection-items=Collection Items (Automatic Copy)
 collection-mapping-help=You can use mapping to display specific fields of the items in the collection. The fields available depend on the type and subtype common to all items in the collection. (Automatic Copy)
 collection-page=Collection Page (Automatic Copy)
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=Collection Provider (Automatic Copy)
 collection-providers=Collection Providers (Automatic Copy)
 collection-title=Collection Title (Automatic Copy)
@@ -11641,6 +11643,7 @@ potential-actions=சாத்தியமான செயல்கள்
 pound=பவுண்டு
 power-users=Power Users (Automatic Copy)
 powered-by-x=Powered by {0} (Automatic Copy)
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=துல்லியமான
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Precompile JSPs for faster speed. (Automatic Copy)
