--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Bu geçişe tıklayarak kuruluşunuz için ortak ve/veya özel bir site oluşturabilirsiniz. (Automatic Translation)
 by-date-range=Şu Tarih Aralığında:
 by-email-address=E-posta Adresinden
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Ekran İsminden
 by-time-frame=Şu Zaman Diliminden:
 by-user-id=Kullanıcı Id'sinden
@@ -3146,6 +3147,7 @@ collection-item=Koleksiyon Öğesi (Automatic Translation)
 collection-items=Toplama Öğeleri (Automatic Translation)
 collection-mapping-help=Koleksiyondaki öğelerin belirli alanlarını görüntülemek için eşlemeyi kullanabilirsiniz. Kullanılabilir alanlar, koleksiyondaki tüm öğeler için ortak olan türe ve alt türe bağlıdır. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=Koleksiyon Sağlayıcısı (Automatic Translation)
 collection-providers=Tahsilat Sağlayıcıları (Automatic Translation)
 collection-title=Koleksiyon Başlığı (Automatic Translation)
@@ -11641,6 +11643,7 @@ potential-actions=Olası Eylemler (Automatic Translation)
 pound=Lirası (Automatic Translation)
 power-users=İleri Düzey Kullanıcılar (Automatic Translation)
 powered-by-x=Powered by {0} (Automatic Copy)
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=kesinlik (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Daha yüksek hız için JSP'leri önceden derle. (Automatic Translation)
