--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Натиснувши цей перемикач, можна створити загальнодоступний та/або приватний сайт для своєї організації. (Automatic Translation)
 by-date-range=По діапазону дат:
 by-email-address=По email адресах
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=По екранному найменню
 by-time-frame=По діапазону часу:
 by-user-id=По ID користувача
@@ -3146,6 +3147,7 @@ collection-item=Елемент збірки (Automatic Translation)
 collection-items=Елементи збірки (Automatic Translation)
 collection-mapping-help=Зіставлення можна використовувати для відображення певних полів елементів колекції. Доступні поля залежать від типу та підтипу, спільних для всіх елементів колекції. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=Постачальник колекції (Automatic Translation)
 collection-providers=Постачальники колекцій (Automatic Translation)
 collection-title=Назва збірки (Automatic Translation)
@@ -11641,6 +11643,7 @@ potential-actions=Потенційні дії (Automatic Translation)
 pound=Фунт
 power-users=Користувачі живлення (Automatic Translation)
 powered-by-x=Powered by {0} (Automatic Copy)
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Точність (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Попередньо компіляція СПЗ для швидшої швидкості. (Automatic Translation)
