--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=点击此开关，您可以为所在组织创建公开和/或不公开站点。
 by-date-range=按时间范围：
 by-email-address=通过邮件地址
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=通过屏幕名称
 by-time-frame=通过时间帧：
 by-user-id=通过用户账号
@@ -3146,6 +3147,7 @@ collection-item=集合条目
 collection-items=集合条目
 collection-mapping-help=您可以使用映射来显示集合中条目的特定字段。可用字段取决于集合中所有条目共有的类型和子类型。
 collection-page=集合页面
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=集合提供程序
 collection-providers=集合提供程序
 collection-title=集合标题
@@ -11643,6 +11645,7 @@ potential-actions=可能的操作
 pound=磅
 power-users=高级用户
 powered-by-x=由 {0} 提供技术支持
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=精度
 precision-decimal=小数精度
 precompile-jsps-for-faster-speed=预编译JSP以提高速度。
