--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=بالنقر فوق هذا التبديل، يمكنك إنشاء موقع عام و/أو خاص لمؤسستك.
 by-date-range=بفترة الأيام:
 by-email-address=بواسطة العنوان الإلكتروني
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=الإسم الظاهر
 by-time-frame=بفترة الوقت:
 by-user-id=بواسطة الرمز التعريفي للمستخدم
@@ -3146,6 +3147,7 @@ collection-item=بند التحصيل
 collection-items=بنود التحصيل
 collection-mapping-help=يمكنك استخدام التعيين لعرض حقول معينة من العناصر في المجموعة. تعتمد الحقول المتوفرة على النوع والنوع الفرعي الشائع لجميع العناصر في المجموعة.
 collection-page=صفحة المجموعة
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=موفر المجموعة
 collection-providers=موفرو التجميع
 collection-title=عنوان المجموعة
@@ -11641,6 +11643,7 @@ potential-actions=إجراءات محتملة
 pound=رطل
 power-users=مستخدمون متميزون
 powered-by-x=مدعوم من {0}
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=الدقة
 precision-decimal=رقم عشري للدقة
 precompile-jsps-for-faster-speed=قم بإجراء التجميع المسبق لصفحات JSP للحصول على سرعة أعلى.
