--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Klepnutím na tento přepínač můžete vytvořit veřejný nebo soukromý web pro vaši organizaci. (Automatic Translation)
 by-date-range=Dle data:
 by-email-address=Podle e-mailové adresy
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Podle uživatelského jména
 by-time-frame=Dle času:
 by-user-id=Podle ID uživatele
@@ -3146,6 +3147,7 @@ collection-item=Položka kolekce (Automatic Translation)
 collection-items=Kolekce položky (Automatic Translation)
 collection-mapping-help=Mapování můžete použít k zobrazení určitých polí položek v kolekci. Dostupná pole závisí na typu a podtypu, které jsou společné pro všechny položky v kolekci. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=Poskytovatel kolekce (Automatic Translation)
 collection-providers=Zprostředkovatelé kolekce (Automatic Translation)
 collection-title=Název kolekce (Automatic Translation)
@@ -11641,6 +11643,7 @@ potential-actions=Potenciální akce
 pound=Libra
 power-users=Pokročilý uživatel
 powered-by-x=Powered by {0} (Automatic Copy)
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=přesnost (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Předkompilujte JSP pro vyšší rychlost. (Automatic Translation)
