--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=By clicking this toggle you could create a public and/or private site for your organization. (Automatic Copy)
 by-date-range=Por rango de datas:
 by-email-address=Por enderezo de correo electrónico
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Por nome de usuario
 by-time-frame=Por período de tempo:
 by-user-id=Por ID do usuario
@@ -3146,6 +3147,7 @@ collection-item=Collection Item (Automatic Copy)
 collection-items=Collection Items (Automatic Copy)
 collection-mapping-help=You can use mapping to display specific fields of the items in the collection. The fields available depend on the type and subtype common to all items in the collection. (Automatic Copy)
 collection-page=Collection Page (Automatic Copy)
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=Collection Provider (Automatic Copy)
 collection-providers=Collection Providers (Automatic Copy)
 collection-title=Collection Title (Automatic Copy)
@@ -11641,6 +11643,7 @@ potential-actions=Accións potenciais
 pound=Libra
 power-users=Usuarios avanzados
 powered-by-x=Powered by {0} (Automatic Copy)
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Precisión
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Precompilar JSPs para maior velocidade.
