--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Dengan mengklik tombol ini, Anda bisa membuat situs publik dan/atau pribadi untuk organisasi Anda. (Automatic Translation)
 by-date-range=Dengan Rentang Tanggal:
 by-email-address=Dengan Alamat Email
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Dengan Nama Layar
 by-time-frame=Dengan Time Frame:
 by-user-id=Dengan User ID
@@ -3146,6 +3147,7 @@ collection-item=Item Koleksi (Automatic Translation)
 collection-items=Koleksi Item (Automatic Translation)
 collection-mapping-help=Anda bisa menggunakan pemetaan untuk menampilkan bidang tertentu dari item dalam koleksi. Bidang yang tersedia bergantung pada tipe dan subtipe yang umum untuk semua item dalam koleksi. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=Penyedia Koleksi (Automatic Translation)
 collection-providers=Penyedia Koleksi (Automatic Translation)
 collection-title=Judul Koleksi (Automatic Translation)
@@ -11641,6 +11643,7 @@ potential-actions=Potensi Tindakan
 pound=Pon
 power-users=Daya Pengguna
 powered-by-x=Powered by {0} (Automatic Copy)
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=presisi (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=JSP pra-kompromi untuk kecepatan yang lebih cepat. (Automatic Translation)
