--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=על ידי לחיצה על המתג הדו-מצבי הזה באפשרותך ליצור אתר ציבורי ו/או פרטי עבור הארגון שלך.
 by-date-range=לפי טווח התאריכים:
 by-email-address=לפי כתובת האימייל
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=לפי כינוי
 by-time-frame=לפי מסגרת זמן:
 by-user-id=לפי קוד זיהוי המשתמש
@@ -3146,6 +3147,7 @@ collection-item=פריט אוסף (Automatic Translation)
 collection-items=פריטי אוסף (Automatic Translation)
 collection-mapping-help=באפשרותך להשתמש במיפוי כדי להציג שדות ספציפיים של הפריטים באוסף. השדות הזמינים תלויים בסוג ובסוג המשנה המשותפים לכל הפריטים באוסף. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=ספק אוסף (Automatic Translation)
 collection-providers=ספקי גבייה (Automatic Translation)
 collection-title=כותרת אוסף (Automatic Translation)
@@ -11641,6 +11643,7 @@ potential-actions=פעולות פוטנציאליות
 pound=פאונד
 power-users=משתמשי על
 powered-by-x=Powered by {0} (Automatic Copy)
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=דיוק (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=הדר מראש את ה-JSPs למהירות גבוהה יותר.
