--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lo.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lo.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=By clicking this toggle you could create a public and/or private site for your organization. (Automatic Copy)
 by-date-range=ຈັດລຽງຕາມວັນທີ
 by-email-address=ດ້ວຍທີ່ຢູ່ອີເມວ
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=ດ້ວຍຊື່ໜ້າຈໍ
 by-time-frame=ດ້ວຍເຟຣມເວລາ:
 by-user-id=ດ້ວຍໄອດີຜູ້ໃຊ້
@@ -3146,6 +3147,7 @@ collection-item=Collection Item (Automatic Copy)
 collection-items=Collection Items (Automatic Copy)
 collection-mapping-help=You can use mapping to display specific fields of the items in the collection. The fields available depend on the type and subtype common to all items in the collection. (Automatic Copy)
 collection-page=Collection Page (Automatic Copy)
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=Collection Provider (Automatic Copy)
 collection-providers=Collection Providers (Automatic Copy)
 collection-title=Collection Title (Automatic Copy)
@@ -11641,6 +11643,7 @@ potential-actions=ເຫດການທີ່ອາດເກີດຂື້ນ
 pound=ປອນ
 power-users=ອຳນາດຜູ້ໃຊ້
 powered-by-x=Powered by {0} (Automatic Copy)
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Precision (Automatic Copy)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Precompile JSPs for faster speed. (Automatic Copy)
