--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Ved å klikke denne veksleknappen kan du opprette et offentlig og/eller privat område for organisasjonen. (Automatic Translation)
 by-date-range=Etter dato:
 by-email-address=Etter e-postadresse
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Etter brukernavn
 by-time-frame=Etter tidspunkt:
 by-user-id=Etter bruker-ID
@@ -3146,6 +3147,7 @@ collection-item=Samlinginnlegg
 collection-items=Samling elementer (Automatic Translation)
 collection-mapping-help=Du kan bruke tilordning til å vise bestemte felt for elementene i samlingen. Hvilke felt som er tilgjengelige, avhenger av typen og undertypen som er felles for alle elementene i samlingen. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=Samlingtilbyder
 collection-providers=Samlingtilbyder
 collection-title=Samlingtittel
@@ -11641,6 +11643,7 @@ potential-actions=Potensielle handlinger
 pound=Pund
 power-users=Superbrukere
 powered-by-x=Powered by {0} (Automatic Copy)
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Presisjon
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Forhåndskompiler jsp for raskere hastighet. (Automatic Translation)
