--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Ao clicar neta alternância você pode criar um site público e/ou privado para sua organização.
 by-date-range=Por Período:
 by-email-address=Por Endereço de Email
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Por Nome de Usuário
 by-time-frame=Por disponibilidade de horário:
 by-user-id=Por ID de Usuário
@@ -3146,6 +3147,7 @@ collection-item=Itens de coleção
 collection-items=Itens de coleção
 collection-mapping-help=Você pode usar o mapeamento para exibir campos específicos dos itens na coleção. Os campos disponíveis dependem so tipo e subtipo comum a todos os itens na coleção.
 collection-page=Página de coleção
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=Provedor de coleção
 collection-providers=Fornecedores de coleção
 collection-title=Título de coleção
@@ -11641,6 +11643,7 @@ potential-actions=Ações potenciais
 pound=Libra
 power-users=Usuários avançados
 powered-by-x=Da plataforma {0}
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Precisão
 precision-decimal=Casa decimal
 precompile-jsps-for-faster-speed=Precompilar JSPs para maior velocidade.
