--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Ao clicar neste alternador, você pode criar um site público e/ou privado para sua organização. (Automatic Translation)
 by-date-range=Por Intervalo de Datas:
 by-email-address=Por Endereço de Email
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Por Nome de Utilizador
 by-time-frame=Por Período de Tempo:
 by-user-id=Por ID de Utilizador
@@ -3146,6 +3147,7 @@ collection-item=Item de Coleção
 collection-items=Itens de Coleção
 collection-mapping-help=Você pode usar o mapeamento para exibir campos específicos dos itens da coleção. Os campos disponíveis dependem do tipo e subtipo comuns a todos os itens da coleção. (Automatic Translation)
 collection-page=Página de Coleção
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=Provedor de Coleção
 collection-providers=Provedores de Coleção
 collection-title=Título de Coleção
@@ -11643,6 +11645,7 @@ potential-actions=Ações Potenciais
 pound=Libra
 power-users=Power Users (Automatic Copy)
 powered-by-x=Powered by {0} (Automatic Copy)
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=precisão (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Pré-compilar JSPs para melhorar a performance.
