--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Genom att klicka på den här knappen kan du skapa en offentlig och/eller privat webbplats för din organisation.
 by-date-range=Efter datum:
 by-email-address=Med e-postadress
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Med kontonamn
 by-time-frame=Efter tid:
 by-user-id=Efter användar-id
@@ -3146,6 +3147,7 @@ collection-item=Samlingsobjekt
 collection-items=Samlingsobjekt
 collection-mapping-help=Du kan använda mappning för att visa specifika fält för objekten i samlingen. Fälten som är tillgängliga beror på typ och undertyp som är vanliga för alla objekt i samlingen.
 collection-page=Samlingssida
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=Samlingsleverantör
 collection-providers=Samlingsleverantörer
 collection-title=Samlingstitel
@@ -11641,6 +11643,7 @@ potential-actions=Möjliga åtgärder
 pound=Pund
 power-users=Superanvändare
 powered-by-x=Drivs av {0}
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Precision
 precision-decimal=Precisionsdecimal
 precompile-jsps-for-faster-speed=Förkompilera JSP:er för snabbare hastighet.
