--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -2437,6 +2437,7 @@ by-choosing-to-reassign-the-resource,-all-actions-will-be-removed-from-the-role-
 by-clicking-this-toggle-you-could-create-a-public-and-or-private-site-for-your-organization=Bằng cách nhấp vào nút bật/tắt này, bạn có thể tạo một trang web công khai và/hoặc riêng tư cho tổ chức của mình. (Automatic Translation)
 by-date-range=Theo ngày:
 by-email-address=Bởi địa chỉ thư điện tử
+by-pre-filtering-the-collection-you-narrow-down-the-results-that-appear-on-the-page=By pre-filtering the collection, you narrow down the results that appear on the page. (Automatic Copy)
 by-screen-name=Bởi tên giao diện
 by-time-frame=Theo khung thời gian:
 by-user-id=Bởi định danh người dùng
@@ -3146,6 +3147,7 @@ collection-item=Mục Bộ sưu tập (Automatic Translation)
 collection-items=Mục thu thập (Automatic Translation)
 collection-mapping-help=Bạn có thể sử dụng ánh xạ để hiển thị các trường cụ thể của các mục trong bộ sưu tập. Các trường có sẵn phụ thuộc vào loại và loại phụ phổ biến cho tất cả các mục trong bộ sưu tập. (Automatic Translation)
 collection-page=Collection Page (Automatic Copy)
+collection-pre-filtered=Collection Pre-filtered (Automatic Copy)
 collection-provider=Nhà cung cấp bộ sưu tập (Automatic Translation)
 collection-providers=Nhà cung cấp bộ sưu tập (Automatic Translation)
 collection-title=Tiêu đề Bộ sưu tập (Automatic Translation)
@@ -11641,6 +11643,7 @@ potential-actions=Tác động tiềm năng
 pound=Pound (Bảng Anh)
 power-users=Người dùng quyền hạn lớn
 powered-by-x=Powered by {0} (Automatic Copy)
+pre-filter-collection=Pre-filter Collection (Automatic Copy)
 precision=Chính xác (Automatic Translation)
 precision-decimal=Precision Decimal (Automatic Copy)
 precompile-jsps-for-faster-speed=Biên dịch sẵn JSP cho tốc độ nhanh hơn. (Automatic Translation)
